--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -95,6 +95,11 @@
       width: 100%;
       z-index: 1000;
     }
+
+    .larger-link {
+      font-size: 20px;
+      font-weight: bold;
+    }
   
     nav a {
       color: white;
@@ -118,7 +123,9 @@
   <!-- Navigation Bar Section -->
   <nav>
     <a href="https://github.com/c-mawn/defuse-the-situation">GitHub</a>
-    <a href="docs/assets/Updated defuser's manual.pdf">PDF Document</a>
+    <a href="docs/index.md" class="larger-link">Defuse the Situation</a>
+    <a href="docs/assets/Updated defuser's manual.pdf">Defuser Manual</a>
+
   </nav>
 
   <!-- Sidebar Section -->
