--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -123,11 +123,11 @@
   <!-- Navigation Bar Section -->
   <nav>
     <a href="https://github.com/c-mawn/defuse-the-situation">GitHub</a>
-    <a href="docs/index.md" class="larger-link">Defuse the Situation</a>
-    <a href="docs/assets/Updated defuser's manual.pdf">Defuser Manual</a>
+    <a href="/" class="larger-link">Defuse the Situation</a>
+    <a href="https://github.io/c-mawn/defuse-the-situation/assets/Updated defuser's manual.pdf">Defuser Manual</a>
 
   </nav>
-
+  
   <!-- Sidebar Section -->
   <div class="sidebar">
     <ul>
