--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -123,8 +123,8 @@
   <!-- Navigation Bar Section -->
   <nav>
     <a href="https://github.com/c-mawn/defuse-the-situation">GitHub</a>
-    <a href="/" class="larger-link">Defuse the Situation</a>
-    <a href="https://github.io/c-mawn/defuse-the-situation/assets/Updated defuser's manual.pdf">Defuser Manual</a>
+    <a href="/defuse-the-situation" class="larger-link">Defuse the Situation</a>
+    <a href="https://github.io/c-mawn/defuse-the-situation/assets/defuser-manual">Defuser Manual</a>
 
   </nav>
   
