--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -124,7 +124,7 @@
   <nav>
     <a href="https://github.com/c-mawn/defuse-the-situation">GitHub</a>
     <a href="/defuse-the-situation" class="larger-link">Defuse the Situation</a>
-    <a href="https://github.io/c-mawn/defuse-the-situation/assets/defuser-manual">Defuser Manual</a>
+    <a href="https://docs.google.com/document/d/1Z6BZuGlyOPlfiu3QI5Rx0rkZOnyrAtm-4_6X1RQcbHA/edit?usp=sharing">Defuser Manual</a>
 
   </nav>
   
